--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-***************************** Webgoat.NET **********************************
+***************************** Webgoat.NET - ChuckB **********************************
 * Source Code: https://github.com/jerryhoff/WebGoat.NET
 * Download zip: https://github.com/jerryhoff/WebGoat.NET/zipball/master
 ****************************************************************************
